--- a/Windows11Upgrade/Windows11Upgrade.csproj
+++ b/Windows11Upgrade/Windows11Upgrade.csproj
@@ -65,26 +65,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="win11_downloadSelection.cs">
+    <Compile Include="w11uu_manual.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="win11_downloadSelection.Designer.cs">
-      <DependentUpon>win11_downloadSelection.cs</DependentUpon>
+    <Compile Include="w11uu_manual.Designer.cs">
+      <DependentUpon>w11uu_manual.cs</DependentUpon>
+    </Compile>
+    <Compile Include="w11uu_auto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="w11uu_auto.Designer.cs">
+      <DependentUpon>w11uu_auto.cs</DependentUpon>
     </Compile>
     <Compile Include="globals.cs" />
-    <Compile Include="win11_upgradeSelection.cs">
+    <Compile Include="w11uu_start.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="win11_upgradeSelection.Designer.cs">
-      <DependentUpon>win11_upgradeSelection.cs</DependentUpon>
+    <Compile Include="w11uu_start.Designer.cs">
+      <DependentUpon>w11uu_start.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="win11_downloadSelection.resx">
-      <DependentUpon>win11_downloadSelection.cs</DependentUpon>
+    <EmbeddedResource Include="w11uu_auto.resx">
+      <DependentUpon>w11uu_auto.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="win11_upgradeSelection.resx">
-      <DependentUpon>win11_upgradeSelection.cs</DependentUpon>
+    <EmbeddedResource Include="w11uu_manual.resx">
+      <DependentUpon>w11uu_manual.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="w11uu_start.resx">
+      <DependentUpon>w11uu_start.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
